--- a/resume.tex
+++ b/resume.tex
@@ -4,10 +4,10 @@
 %====================
 % OFFICIAL PUBLIC OVERLEAF TEMPLATE
 % https://www.overleaf.com/latex/templates/data-science-tech-resume-template/zcdmpfxrzjhv
-% 
+%
 %====================
 %
-% Resume template for data scientists, a complement to data-science-tech-cover-letter-template:
+% Resume template:
 % https://www.overleaf.com/latex/templates/data-science-tech-cover-letter-template/gbrcqktbsfxf
 %
 % Files:        resume.tex: Main file
@@ -19,10 +19,11 @@
 %               section/education: schools and stuff
 %               section/activities: optional, could comment out in resume.tex.
 %
-% Editor:       https://github.com/TimmyChan 
+% Original Editor:       https://github.com/TimmyChan
 %               https://www.linkedin.com/in/timmy-l-chan/
-%               
-% Last Updated: March 24th, 2022
+%
+% Source Last Updated: March 24th, 2022
+% Last Updated: July 17, 2022
 %
 %====================
 
@@ -32,13 +33,13 @@
 %====================
 % CONTACT INFORMATION
 %====================
-\def\name{Your Name} % Name Here
-\def\phone{(xxx) xxx-xxxx}
-\def\city{somewhere, state}
-\def\email{yourname@gmail.com}
-\def\LinkedIn{timmy-l-chan} % linkedin.com/in/______
-\def\github{TimmyChan} % github username
-\def\role{Data Scientist / Junior Developer} % JOB TITLE
+\def\name{Andrew Ahern} % Name Here
+\def\phone{(508) 287-1379}
+\def\city{Vallejo, CA}
+\def\email{Andrew.M.Ahern@gmail.com}
+\def\LinkedIn{andrewmahern} % linkedin.com/in/______
+\def\github{Barabbas0} % github username
+\def\role{Data Analyst / Site Reliability Engineer} % JOB TITLE
 
 \input{_header}
 \begin{document}
@@ -47,7 +48,7 @@
 \section{Skills}
 \input{sections/skills}
 
-\section{Technical Experience}
+\section{Relevant Technical Experience}
 \input{sections/experience}
 
 \section{Education}
