--- a/sections/activities.tex
+++ b/sections/activities.tex
@@ -1,13 +1,10 @@
-Graduate Student Council Representative	\hfill YYYY --- YYYY
- 
-Academic Student Association: Some Workshop, Creator/Facilitator	\hfill Fall YYYY
 
-City Symposium Series, University of Motherland, Poster Presenter	\hfill Fall YYYY
+ \href{https://trailblazer.me/id/aahern8}{Salesforce Trailhead training} 	\hfill Ongoing
 
-College of Science and Engineering Student Project Showcase, Research Presenter	\hfill Spring YYYY
+FINRA Securities Industries Essentials	\hfill June 2021
 
-Graduate Research and Creative Works Showcase, State University, Research Presenter	\hfill Spring YYYY
+Resident Insurance Producer license, California Department of Insurance	\hfill March 2021
 
-Some Coding Sprint, University of Some Other State	\hfill Spring YYYY
+CME Group University Trading Challenge	\hfill October 2020
 
-
+Facility and Operations Manager, Startup	\hfill October 2017 --- August 2019
