--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,10 +1,8 @@
 
-\skills{Master of Arts in Mathematics}, \textit{Texas Institute of Technology \& Science}	\hfill MMM 2021
+\skills{Bachelor of Business Administration, Finance}, \textit{CSU East Bay - College of Business and Economics}	\hfill 2019 --- 2021
 
-\skills{Bachelor of Arts in Mathematics}, \textit{Somewhere Technical Institute} \hfill	MMM YYYY
+\textit{Pioneer Leadership certificate, California State University East Bay} \hfill 2020
 
-\textit{University Fellowship, University of Motherland} 	\hfill YYYY --- YYYY
+\skills{Associates of Arts in Business Administration and Management}, \textit{College of Alameda} \hfill	2018 --- 2019
 
-\textit{Academic Scholarship, Some State University} \hfill	YYYY --- YYYY
-
-
+\textit{Computer Science and Database courses, Cape Cod Community College} \hfill	2009 --- 2012
