--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,61 +1,53 @@
 %====================
 % EXPERIENCE A
 %====================
-\subsection{{ROLE / PROJECT A \hfill MMM YYYY --- Present}}
-\subtext{company A \hfill somewhere, state}
+\subsection{{Data Analyst \hfill October 2021 --- Present}}
+\subtext{Food Bank of Contra Costa and Solano \hfill Concord, CA}
 \begin{zitemize}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-\item Suspendisse pretium elit quis ullamcorper ultricies.
-\item Morbi a nisl sit amet massa ultricies fermentum.
-\item Sed a diam et turpis tempor venenatis eget eget ipsum.
-\item Vestibulum fermentum justo vitae aliquet accumsan.
+\item Utilized Salesforce reports and SQL to develop donor segmentation models for increasing engagement and other strategic goals.
+\item Performed database research to evaluate campaigns and refine cultivation strategies.
+\item Build reports and dashboards in Salesforce to make insights accessible and provide recommendations.
+\item Documenting processes to clean data, reduce errors, and standardize formatting.
 \end{zitemize}
 
 %====================
 % EXPERIENCE B
 %====================
-\subsection{{ROLE / PROJECT B \hfill MMM YYYY --- MMM YYYY}}
-\subtext{company B \hfill somewhere, state}
+\subsection{{IT/Technical Support \hfill August 2019 --- November 2019}}
+\subtext{Studylog, Inc. \hfill South San Francisco, CA}
 \begin{zitemize}
-\item Aenean semper felis et viverra eleifend.
-\item Integer aliquam odio id tellus sollicitudin, ut pellentesque elit blandit.
-\item Vestibulum iaculis quam ac nibh tincidunt rutrum.
+\item Took ownership of rollout of CRM migration, documenting best practices, and implementing integrations and data backup plans.
+\item Provided on-premise and remote business customer support.
+\item Led weekly support meetings to distribute long term and ad-hoc issues to other team members.
 \end{zitemize}
 
 %====================
 % EXPERIENCE C
 %====================
-\subsection{{ROLE / PROJECT C \hfill MMM YYYY --- MMM YYYY}}
-\subtext{company C \hfill somewhere, state}
+\subsection{{Network Operations and Support Engineer  \hfill September 2014 --- February 2017}}
+\subtext{Biscom, Inc. \hfill Chelmsford, CA}
 \begin{zitemize}
-\item Donec volutpat turpis et placerat pharetra.
-\item Sed sit amet sem facilisis, scelerisque lectus aliquam, accumsan purus.
-\item Aliquam at urna congue dolor luctus sodales.
-\item Quisque vitae tortor at elit tincidunt molestie sed ac quam.
+\item Assisted network and system engineers in integration and configuration of enterprise servers.
+\item Worked in NOC utilizing Python and SQL to develop web-based reporting and dashboards, increasing service reliability.
 \end{zitemize}
 
 %====================
 % EXPERIENCE D
 %====================
-\subsection{{ROLE / PROJECT D \hfill MMM YYYY --- MMM YYYY}}
-\subtext{company D \hfill somewhere, state}
+\subsection{{Trading System Analyst \hfill May 2014 --- July 2014}}
+\subtext{Boston Technologies Inc. \hfill Boston, MA}
 \begin{zitemize}
-\item Vestibulum accumsan massa quis dignissim faucibus.
-\item Maecenas suscipit mi ut ullamcorper pharetra.
-\item In vitae ligula tristique, iaculis tortor in, egestas magna.
-\item In fringilla purus malesuada lectus imperdiet pulvinar.
-\item Nulla eu dolor congue, mollis dui a, eleifend purus.
+\item Provided 24/5 Forex, Metals, and Derivative Contracts (CFD) trading support to brokers.
+\item Monitored containerized data feed, trade, and liquidity systems.
+\item Used SQL to investigate order executions and troubleshoot networks and systems.
 \end{zitemize}
 
 %====================
 % EXPERIENCE E
 %====================
-%\subsection{{ROLE / PROJECT E \hfill MMM YYYY --- MMM YYYY}}
-%\subtext{company E \hfill somewhere, state}
-%\begin{zitemize}
-%\item In lobortis libero consectetur eros vehicula, vel pellentesque quam fringilla.
-%\item Ut malesuada purus at mi placerat dapibus.
-%\item Suspendisse finibus massa eu nisi dictum, a imperdiet tellus convallis.
-%\item Nam feugiat erat vestibulum lacus feugiat, efficitur gravida nunc imperdiet.
-%\item Morbi porta lacus vitae augue luctus, a rhoncus est sagittis.
-%\end{zitemize}
+\subsection{{Software Development \hfill July 2013 --- March 2014}}
+\subtext{CarrierStore \hfill Maynard, MA}
+\begin{zitemize}
+\item Used Java, SQL, and JavaScript/jQuery to develop on Salesforce platform.
+\item Enforced Test Driven Development and rewrote unite tests to properly test code.
+\end{zitemize}
