--- a/sections/objective.tex
+++ b/sections/objective.tex
@@ -2,5 +2,4 @@
 % Objective Statement
 %====================
 
-
-\blindtext[1]
+Technology enthusiast with several years of professional and a lifetime of personal systems experience seeking the opportunity to apply skills to business infrastructure. I have a curious personality, diverse skill set, and a strong desire to grow, individually and collectively. I enjoy working cooperatively to build robust systems and processes and reading to stay current and learn more.
