--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{p{11em} p{1em} p{43em}}
-\skills{Tools and Languages} & &    Python, Git, \LaTeX, MarkDown, PHP \\
-\skills{Quantitative Research} & &  Mathematical optimization, Mathematical Modeling, R, MySQL \\
-\skills{Communication} & &          English, Cantonese (fluent speaker), Chinese (reading and writing)
+\skills{Tools and Languages} & &    Python, SQL, Salesforce, MS Dynamics, REST APIs and Networking Protocols \\
+\skills{Values} & &  Research, Collaboration, Inquiry, Efficiency, Adaptability \\
+%\skills{Communication} & &          English, Cantonese (fluent speaker), Chinese (reading and writing)
 \end{tabular}
