--- a/sections/activities.tex
+++ b/sections/activities.tex
@@ -1,3 +1,4 @@
+Freelance Business Consulting   \hfill May 2021 --- Current
 
  \href{https://trailblazer.me/id/aahern8}{Salesforce Trailhead training} 	\hfill Ongoing
 
