--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,7 +1,7 @@
 %====================
 % EXPERIENCE A
 %====================
-\subsection{{Data Analyst \hfill October 2021 --- Present}}
+\subsection{{Data Analyst \hfill October 2021 --- July 2022}}
 \subtext{Food Bank of Contra Costa and Solano \hfill Concord, CA}
 \begin{zitemize}
 \item Utilized Salesforce reports and SQL to develop donor segmentation models for increasing engagement and other strategic goals.
